# cuda-particles

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  vcpkg.json
data/: LICENSE.txt  README.txt  balls.json  confetti.json  config.json  lava.json  sand.json  slime.json  stardust.json  water.json
data/shaders/: Frag.shader  Vert.shader
include/: Image.h  Scene.h  SimulationScene.h  Sound.h  Util.h  Window.h  pch.h
src/: Image.cpp  Scene.cpp  SimulationScene.cu  Sound.cpp  Util.cpp  Window.cpp  main.cpp
src/ext/: stb_image.cpp  stb_image_write.cpp
